--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,17 +6,13 @@
     subscription-manager repos --enable codeready-builder-for-rhel-9-$(arch)-rpms
   when: ansible_facts['distribution'] == "RedHat"
 
-#- name: zeroc ice | set-enabled crb
-#  become: true
-#  ansible.builtin.command: dnf config-manager --set-enabled crb
-#  state: present
 
-- name: system packages | install epel repo
-  become: true
-  ansible.builtin.dnf:
-    name: epel-release
-    state: present
-  when: ansible_os_family == 'RedHat'
+#- name: system packages | install epel repo
+#  become: true
+#  ansible.builtin.dnf:
+#    name: epel-release
+#    state: present
+#  when: ansible_os_family == 'RedHat'
 
 # use separate yum/apt tasks because package only installs one item at a time
 - name: system packages | basic system utils (rockylinux)
