--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,15 +4,8 @@
   become: true
   ansible.builtin.command:
     subscription-manager repos --enable codeready-builder-for-rhel-9-$(arch)-rpms
-  when: ansible_facts['distribution'] == "RedHat"
+  when: ansible_os_family == 'RedHat'
 
-
-#- name: system packages | install epel repo
-#  become: true
-#  ansible.builtin.dnf:
-#    name: epel-release
-#    state: present
-#  when: ansible_os_family == 'RedHat'
 
 # use separate yum/apt tasks because package only installs one item at a time
 - name: system packages | basic system utils (rockylinux)
