--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,21 @@
     subscription-manager repos --enable codeready-builder-for-rhel-9-$(arch)-rpms
   when: ansible_os_family == 'RedHat'
 
+- name: System | install config-manager
+  become: true
+  ansible.builtin.dnf:
+    update_cache: true
+    name:
+      - 'dnf-command(config-manager)'
+    state: present
+  when: ansible_os_family == 'Rocky'
+
+- name: System | Enable crp repo
+  ansible.builtin.replace:
+    path:  /etc/yum.repos.d/rocky.repo
+    regexp: enabled=0
+    replace: enabled=1
+  when: ansible_os_family == 'Rocky'
 
 # use separate yum/apt tasks because package only installs one item at a time
 - name: system packages | basic system utils (rockylinux)
