--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,7 +22,7 @@
     replace: enabled=1
   when: ansible_os_family == 'Rocky'
 
-# use separate yum/apt tasks because package only installs one item at a time
+# use separate dnf tasks because package only installs one item at a time
 - name: system packages | basic system utils (rockylinux)
   become: true
   ansible.builtin.dnf:
